--- a/styles/style.scss
+++ b/styles/style.scss
@@ -48,6 +48,14 @@ header{
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  #headerBlock {
+    width: 100%;
+    height: 22px; 
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    margin-bottom: 17px;
+  }
 }
 
 #vaughnPaulgerLogo{
@@ -78,7 +86,15 @@ header a{
   z-index: 5;
   margin-top: 24px;
   align-self: flex-end;
+  height: 22px;
   
+  a {
+    text-decoration: none;
+    color: white;
+    cursor: pointer;
+    text-shadow: 2px 2px #000000;
+    /* text-decoration: underline rgba(0, 89, 255, 0.726); */
+  }
 }
 
 .navigation li:hover{
@@ -100,19 +116,12 @@ header a{
   text-shadow: 2px 2px #000000;
 }
 
-.navigation a{
-  text-decoration: none;
-  color: white;
-  cursor: pointer;
-  text-shadow: 2px 2px #000000;
-  /* text-decoration: underline rgba(0, 89, 255, 0.726); */
-}
-
 .testNav {
   width: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   text-align: center;
   z-index: 5;
+  height: 22px;
 }
 
 .testNav li {
@@ -127,10 +136,10 @@ header a{
   text-transform: uppercase;
   cursor: pointer;
   text-shadow: 2px 2px #000000;
-}
 
-.testNav li:hover{
-  border: 1px solid white;
+  &:hover{
+    border: 1px solid white;
+  }
 }
 
 .navigation a:hover{
@@ -166,6 +175,17 @@ header a{
   align-items: center;
   width: 100%;
   /* margin-top: 5%; */
+
+  p{
+    font-family: 'Roboto Condensed', sans-serif;
+    /* background-color: rgba(255, 255, 255, 0.5); */
+    /* color: black; */
+    color: white;
+    font-size: 22px;
+    margin: 80px 40px;
+    line-height: 1.5;
+    text-shadow: 2px 2px #000000;
+  }
 }
 
 #aboutContainer {
@@ -173,17 +193,6 @@ header a{
   justify-content: center;
   align-items: center;
   width: 100%;
-}
-
-#aboutSection p{
-  font-family: 'Roboto Condensed', sans-serif;
-  /* background-color: rgba(255, 255, 255, 0.5); */
-  /* color: black; */
-  color: white;
-  font-size: 22px;
-  margin: 80px 40px;
-  line-height: 1.5;
-  text-shadow: 2px 2px #000000;
 }
 
 #selfPortrait{
@@ -218,11 +227,11 @@ header a{
   display: block;
   margin: 0 auto;
   justify-content: center;
-}
 
-.secondNavigation li {
-  width: 180px;
-}
+  li {
+    width: 180px;
+  }
+} 
 
 .experienceBlocks{
   text-align: center;
@@ -230,29 +239,29 @@ header a{
   margin-top: 80px;
   margin-bottom: 80px;
   position: relative;
-}
 
-.experienceBlocks a {
-  width: 100%;
-}
+  a {
+    width: 100%;
+  }
 
-.experienceBlocks img{
-  width: 75%;
-  height: 100%;
-  border: 2px solid #0066ff;
-}
+  img{
+    width: 75%;
+    height: 100%;
+    border: 2px solid #0066ff;
+  }
 
-.experienceBlocks h3 {
-  margin: 10px;
-  font-size: 2rem;
-  font-weight: 500;
-  text-shadow: 2px 2px #000000;
-}
+  p{
+    font-style: italic;
+    font-weight: 500;
+    text-shadow: 2px 2px #000000;
+  }
 
-.experienceBlocks p{
-  font-style: italic;
-  font-weight: 500;
-  text-shadow: 2px 2px #000000;
+  h3 {
+    margin: 10px;
+    font-size: 2rem;
+    font-weight: 500;
+    text-shadow: 2px 2px #000000;
+  }
 }
 
 .image1 {
@@ -265,48 +274,39 @@ header a{
   position: absolute;
   width: 75%;
   height: 100%;
-}
 
-.image1 span:hover {
-  transform: scale(20);
-}
+  &:nth-child(1) {
+    transform:rotate(0deg);
+    left: -25%;
+    top: -2px;
+  }
 
-.image1 span:nth-child(1)
-{
-  transform:rotate(0deg);
-  left: -25%;
-  top: -2px;
-}
+  &:nth-child(2) {
+    transform:rotate(90deg);
+    top: -50%;
+    margin-left: 4px;
+  }
 
-.image1 span:nth-child(2)
-{
-  transform:rotate(90deg);
-  top: -50%;
-  margin-left: 4px;
-}
+  &:nth-child(3) {
+    transform:rotate(180deg);
+    left: 50%;
+    margin-top: 0.5px;
+  }
 
-.image1 span:nth-child(3)
-{
-  transform:rotate(180deg);
-  left: 50%;
-  margin-top: 0.5px;
-}
+  &:nth-child(4) {
+    transform:rotate(270deg);
+    top: 48%;
+    margin-left: 1px;
+  }
 
-.image1 span:nth-child(4)
-{
-  transform:rotate(270deg);
-  top: 48%;
-  margin-left: 1px;
-}
-
-.image1 span:before
-{
-  content: '';
-  position: absolute;
-  width: 101%;
-  height: 2px;
-  background: #4C94FF;
-  animation: animate 12s linear infinite;
+  &:before {
+    content: '';
+    position: absolute;
+    width: 101%;
+    height: 2px;
+    background: #4C94FF;
+    animation: animate 12s linear infinite;
+  }
 }
 
 @keyframes animate {
@@ -314,26 +314,21 @@ header a{
   transform:scaleX(0);
   transform-origin: left;
   }
-  50%
-  {
+
+  50% {
   transform:scaleX(1);
   transform-origin: left;
   }
-  50.1%
-  {
+
+  50.1% {
   transform:scaleX(1);
   transform-origin: right;
-    
   }
   
-  100%
-  {
+  100% {
   transform:scaleX(0);
   transform-origin: right;
-    
-  }
-  
-  
+  }  
 } 
 
 /*contact section*/
@@ -341,6 +336,18 @@ header a{
   background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
   /* height: 120%; */
+
+  p {
+    color: white;
+    font-size: 1.5rem;
+    margin-top: 40px;
+    font-weight: 800;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    text-align: center;
+    text-shadow: 2px 2px #000000;
+    padding: 10px;
+  }
 }
 
 #contactContainer {
@@ -349,23 +356,11 @@ header a{
   align-items: center;
 }
 
-#contactSection p {
-  align-self: center;
-  color: white;
-  font-size: 1.5rem;
-  margin-top: 60px;
-  font-weight: 800;
-  background-color: rgba(0, 0, 0, 0.5);
-  width: 100%;
-  text-align: center;
-  text-shadow: 2px 2px #000000;
-}
-
 form{
-  width: 30%;
+  width: 400px;
   /* margin: 80px 40px; */
   margin-top: 40px;
-  margin-bottom: 80px;
+  margin-bottom: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -390,7 +385,7 @@ label {
 
 #contactSubmitButton{
   margin-top: 20px;
-  border-radius: 8px;
+  border-radius: 25px;
   display: block;
   font-weight: 700;
   width: 220px;
@@ -399,11 +394,12 @@ label {
   border: 1px solid white;
   background-color: #0066ff;
   color: white;
+
+  &:hover {
+    background-color: rgba(0,102,255, 0.5); 
+  }
 }
 
-#contactSubmitButton:hover {
-  background-color: rgba(0,102,255, 0.5); 
-}
 
 footer{
   width: 100%;
@@ -414,8 +410,12 @@ footer{
   align-self: flex-end;
 }
 
-//tablet media query
+
+//mobile media query
 @media only screen and (max-width: 600px) {
+  body {
+    background-position: 50%;
+  }
   #vaughnPaulgerLogo{
     // width: 400px;
     width: 95%;
@@ -428,18 +428,44 @@ footer{
   }
 
   .navigation {
-    margin-top: 10px;
+    margin-top: 15px;
     height: 20px;
   
-  li {
-    width: 100px;
-  }
+    li {
+      width: 115px;
+    }
   }
 
   .testNav li {
-    width: 100px;
+    width: 115px;
   }
+
+  #aboutContainer {
+    flex-direction: column;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // width: 100%;
   
+    #selfPortrait {
+      height: 250px;
+      margin-top: 40px;
+      margin-bottom: 20px;
+    }
+
+    p {
+      margin-top: 0;
+      margin-bottom: 40px;
+    }
+  }
+
+  form {
+    width: 300px;
+  }
+
+  #contactSubmitButton {
+    width: 180px;
+  }
 }
 
 
